@@ -45,20 +45,6 @@ import Gaffer
 import GafferUI
 import GafferArnold
 
-## \todo This will belong with a Shader base class node at some point, probably in
-# GafferScene.
-def __nodeGadgetCreator( node ) :
-
-	return GafferUI.StandardNodeGadget( node, GafferUI.LinearContainer.Orientation.Y )
-
-GafferUI.NodeGadget.registerNodeGadget( GafferArnold.ArnoldShader.staticTypeId(), __nodeGadgetCreator )
-
-def __parametersNoduleCreator( plug ) :
-
-	return GafferUI.CompoundNodule( plug, GafferUI.LinearContainer.Orientation.Y )
-
-GafferUI.Nodule.registerNodule( GafferArnold.ArnoldShader.staticTypeId(), "parameters", __parametersNoduleCreator )
-
 def __parameterNoduleCreator( plug ) :
 
 	if isinstance( plug, ( Gaffer.BoolPlug, Gaffer.IntPlug, Gaffer.StringPlug ) ) :
